Issue #60: Prvent accumulation of files
ETP-2776

Fix error code 429: too many requests from Github